DataTypeConverter: Remove usage as it is gone in Jdk 11
Replaces with usage of Base64 util class.


Former-commit-id: 6e6b06f5085513cafc189c29451b317cf9536a4a